--- a/hallway-interface/src/index.css
+++ b/hallway-interface/src/index.css
@@ -113,3 +113,7 @@ button:focus-visible {
   box-sizing: border-box;
   border-bottom: 3px solid rgba(255, 255, 255, 0.5);
 }
+
+.ww-box {
+  flex-wrap: nowrap;
+}
