--- a/hallway-interface/src/index.css
+++ b/hallway-interface/src/index.css
@@ -102,11 +102,18 @@ button:focus-visible {
   display: flex;
   flex-direction: row !important;
   gap: 30px;
+}
+
+.day-forecast:not:first-child {
   border-left: 3px solid rgba(255, 255, 255, 0.5) !important;
 }
 
 #ww_6665f5d184b9 span {
   font-size: 1.5em;
+}
+
+.ww_col1 {
+  border-bottom: 3px solid rgba(255, 255, 255, 0.5);
 }
 
 #ww_6665f5d184b9 {
