--- a/hallway-interface/src/index.css
+++ b/hallway-interface/src/index.css
@@ -104,16 +104,12 @@ button:focus-visible {
   gap: 30px;
 }
 
-.day-forecast:not:first-child {
-  border-left: 3px solid rgba(255, 255, 255, 0.5) !important;
-}
-
 #ww_6665f5d184b9 span {
   font-size: 1.5em;
 }
 
 .ww_col1 {
-  border-bottom: 3px solid rgba(255, 255, 255, 0.5);
+  border-bottom: 3px solid rgba(255, 255, 255, 0.5) !important;
 }
 
 #ww_6665f5d184b9 {
